# ha-ashly-aqm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  hacs.json  pyproject.toml
.github/workflows/: ci.yaml
aquacontrol/: README.md  pyproject.toml
aquacontrol/src/aquacontrol/: __init__.py  _testing.py  auth.py  client.py  events.py  exceptions.py  stream.py  topics.py
aquacontrol/tests/: test_auth.py  test_client.py  test_events.py  test_live.py  test_readme_examples.py  test_stream.py  test_topics.py
custom_components/ashly/: __init__.py  button.py  client.py  config_flow.py  const.py  coordinator.py  device_action.py  device_trigger.py  diagnostics.py  entity.py  event_router.py  icons.json  manifest.json  meter.py  number.py  push.py  quality_scale.yaml  repairs.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/ashly/_aquacontrol/: auth.py  stream.py
custom_components/ashly/translations/: en.json
docs/: SECURITY-API.md  WEBSOCKET-API.md
scripts/: embed_python_info_plist.py  grant_python_app_local_network.sh  refresh_python_uuid.py  revert_python_app_local_network.sh  sign_python_with_self_signed_cert.sh
tests/: conftest.py  test_button.py  test_client.py  test_config_flow.py  test_coordinator.py  test_device_action.py  test_device_trigger.py  test_diagnostics.py  test_entity.py  test_event_router.py  test_init.py  test_meter.py  test_number.py  test_push.py  test_repairs.py  test_select.py  test_sensor.py  test_services.py  test_snapshots.py  test_switch.py
tests/integration/: __init__.py  conftest.py  test_live.py
