[project]
name = "ha-ashly-aqm"
version = "0.1.0"
description = "Home Assistant integration for Ashly Audio AQM series zone mixers"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: live-device tests that require ASHLY_HOST env var; opt in with 'pytest -m integration'",
]
# Exclude integration tests by default; opt in with `-m integration`.
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true

# socketio (python-socketio) doesn't ship type stubs.
[[tool.mypy.overrides]]
module = "socketio.*"
ignore_missing_imports = true

# The DHCP service_info module only exists in HA 2026.2+; the try/except fallback
# in config_flow.py handles both. Locally we may be on an older HA stub set.
[[tool.mypy.overrides]]
module = "homeassistant.helpers.service_info.dhcp"
ignore_missing_imports = true

# Tests use pytest/pytest-asyncio fixtures that don't survive strict mode.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disable_error_code = ["no-untyped-def", "no-untyped-call", "misc"]
