[project]
name = "ha-ashly-aqm"
version = "0.8.0"
description = "Home Assistant integration for Ashly Audio AQM-series zone mixers (AQM1208, AQM408) via the AquaControl REST API + socket.io live-meter stream."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Limecooler" }]
keywords = [
  "home-assistant",
  "hacs",
  "home-assistant-custom",
  "integration",
  "ashly",
  "ashly-audio",
  "aqm1208",
  "aqm408",
]

[project.urls]
Homepage = "https://github.com/limecooler/ha-ashly-aqm"
Repository = "https://github.com/limecooler/ha-ashly-aqm"
Issues = "https://github.com/limecooler/ha-ashly-aqm/issues"
Changelog = "https://github.com/limecooler/ha-ashly-aqm/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: live-device tests that require ASHLY_HOST env var; opt in with 'pytest -m integration'",
]
# Exclude integration tests by default; opt in with `-m integration`.
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
# 3.14 because HA core in current pytest-hacc uses 3.14-only syntax (PEP 758
# unparenthesized except*); we still SUPPORT 3.12+ at runtime, so manifest
# stays Python 3.12+-compatible.
python_version = "3.14"
strict = true

# socketio (python-socketio) doesn't ship type stubs.
[[tool.mypy.overrides]]
module = "socketio.*"
ignore_missing_imports = true

# The DHCP / zeroconf service_info modules only exist in HA 2026.2+; the
# try/except fallback in config_flow.py handles both. Locally we may be on
# an older HA stub set.
[[tool.mypy.overrides]]
module = "homeassistant.helpers.service_info.dhcp"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "homeassistant.helpers.service_info.zeroconf"
ignore_missing_imports = true

# Tests use pytest/pytest-asyncio fixtures that don't survive strict mode.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disable_error_code = ["no-untyped-def", "no-untyped-call", "misc"]
